--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-spreadsheet": "^2.0.8",
     "grommet": "^2.7.8",
     "grommet-icons": "^4.3.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-google-login": "^5.0.5",
     "react-scripts": "3.1.2",
     "styled-components": "^4.4.0"
   },
